--- a/udqAutoApp/www/app/customer/home/home.html
+++ b/udqAutoApp/www/app/customer/home/home.html
@@ -1,9 +1,10 @@
-﻿<ion-view  align-title="center" title="点趣车生活" class="ion-view-costum">
+﻿<ion-view  align-title="center" title="点趣洗车" class="ion-view-costum">
     <div>
         <ion-nav-bar class="ion-nav-bar-costume" align-title="center"></ion-nav-bar>
     </div>
 
     <ion-content padding="true" class="has-header">
+        <div style="height:50px"></div>
         <div class="row row-bottom row-text-align" >
             <div class="col col-20 div-col-center" style="padding:0px 0px 0px 0px;">
                 <div class="div-col-innerdiv">
@@ -28,7 +29,7 @@
         <div class="div-col-center">
             <div class="div-col-innerdiv">
                 <button class="button button-washauto-circle" ng-click="goToBookWash()">
-                    <img src="image/iwantwash.png" style="vertical-align:central;height:100%; width:100%;" />
+                    <img src="image/iwantwash.png" style="vertical-align:central; height:100%; width:100%;" />
                 </button>
                 <p class="home-p">我要洗车</p>
             </div>
