--- a/udqAutoApp/www/app/employee/order/orderList.html
+++ b/udqAutoApp/www/app/employee/order/orderList.html
@@ -6,15 +6,15 @@
     </ion-nav-bar>
     <!--订单展示-->
         <ion-tabs class="tabs-top input-costume">
-            <ion-tab title="新订单" class="ion-tab-color input-costume" href="#/employeeOrderList/newOrder">
+            <ion-tab title="新订单" class="tab-costume"  href="#/employeeOrderList/newOrder">
                 <ion-nav-view name="newOrder-tab"></ion-nav-view>
             </ion-tab>
 
-            <ion-tab title="已接收" class="ion-tab-color input-costume" href="#/employeeOrderList/acceptedOrder">
+            <ion-tab title="已接收" class="tab-costume"  href="#/employeeOrderList/acceptedOrder">
                 <ion-nav-view name="acceptedOrder-tab"></ion-nav-view>
             </ion-tab>
 
-            <ion-tab title="已完成" class="ion-tab-color input-costume" href="#/employeeOrderList/finishedOrder">
+            <ion-tab title="已完成" class="tab-costume"  href="#/employeeOrderList/finishedOrder">
                 <ion-nav-view name="finishedOrder-tab"></ion-nav-view>
             </ion-tab>
         </ion-tabs>
