--- a/udqAutoApp/www/app/customer/auto/autoList.html
+++ b/udqAutoApp/www/app/customer/auto/autoList.html
@@ -1,7 +1,7 @@
 <ion-view view-title="车辆列表" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfAuto()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfAuto()" style="color:white;"></button>
         </ion-nav-buttons>
 
         <ion-nav-buttons side="right">
