--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -1,7 +1,7 @@
 <ion-view title="我的点趣" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBack()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBack()" style="color:white;"></button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
             <button class="button-clear" ng-click="exitCurrentUser()" style="color:#fafb75;font-weight:600;">注销</button>
@@ -28,7 +28,7 @@
             <div class="row row-top row-text-align">
                 <div class="col col-50 div-col-center" style="padding:0px 0px 0px 0px;">
                     <div class="div-col-innerdiv">
-                        <button class="button ownbutton-circle" ng-click="goToWashTypeIntroduce()">
+                        <button class="button ownbutton-circle" ng-click="goToWashShopInfo()">
                             <img src="image/aboutudianqu.png" style="vertical-align:central;height:100%; width:100%;" />
                         </button>
                         <p class="home-p">洗车店</p>
