--- a/udqAutoApp/www/app/customer/member/memberInfoEdit.html
+++ b/udqAutoApp/www/app/customer/member/memberInfoEdit.html
@@ -2,7 +2,7 @@
 <ion-view title="编辑个人信息" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goToCenter()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goToCenter()" style="color:white;"></button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
             <button class="button-clear" ng-click="saveMemberInfo()" style="color:#fafb75;font-weight:600;">保存</button>
@@ -17,11 +17,14 @@
                     <span class="input-label"><h2>称呼</h2></span>
                     <input type="text" name="name" ng-model='user.name' placeholder="请输入您的称呼" style="color:white;" required>
                 </label>
+                <label class="item item-input input-costume">
+                    <span class="input-label"><h2>手机</h2></span>
+                    <input type="text" name="mobile" ng-model='user.mobile' placeholder="请输入您要变更的手机号" style="color:white;" required>
+                </label>
                 <ion-item class="input-costume" style="color:white;">
                     <input  type="radio" name="sex" checked ng-model="user.sex" value='1' />男士&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <input  type="radio" name="sex" ng-model="user.sex" value='2' />女士
                 </ion-item>
-
             </ion-list>
         </form>
     </ion-content>
