--- a/udqAutoApp/www/app/employee/order/photograph.html
+++ b/udqAutoApp/www/app/employee/order/photograph.html
@@ -1,7 +1,7 @@
 ﻿<ion-view view-title="完成订单" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-arrow-left-c" ng-click="goBackToOrder()"></button>
+            <button class="button-clear icon ion-arrow-left-c" ng-click="goBackToOrder()" style="color:white;"></button>
         </ion-nav-buttons>
 
     </ion-nav-bar>
