--- a/udqAutoApp/www/app/customer/home/home.html
+++ b/udqAutoApp/www/app/customer/home/home.html
@@ -47,10 +47,10 @@
             <div class="col col-60"></div>
             <div class="col col-20 div-col-center" style="padding:0px 0px 0px 0px;">
                 <div class="div-col-innerdiv">
-                    <button class="button ownbutton-circle">
+                    <button class="button ownbutton-circle" ng-click="goToAutoList()">
                         <img src="image/sharewithFriends.png" style="vertical-align:central;height:100%; width:100%;" />
                     </button>
-                    <p class="home-p">分享好友</p>
+                    <p class="home-p">我的车辆</p>
                 </div>
                 
             </div>
