--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -1,7 +1,7 @@
 ﻿<ion-view view-title="选择支付方式" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBack()" style="color:white;"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBack()" style="color:white;width:40px"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
 
@@ -17,6 +17,6 @@
             </ion-radio>
         </ion-list>
         <div class="spacer" style="height:20px;"></div>
-        <button class="allbutton  button-block" ng-click="commitOrder()">提交订单</button>
+        <button class="allbutton  button-block button-small" ng-click="commitOrder()">提交订单</button>
     </ion-content>
 </ion-view>
