--- a/udqAutoApp/www/app/employee/order/photograph.html
+++ b/udqAutoApp/www/app/employee/order/photograph.html
@@ -1,7 +1,7 @@
 ﻿<ion-view view-title="完成订单" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-arrow-left-c" ng-click="goBackToOrder()" style="color:white;"></button>
+            <button class="button-clear icon ion-arrow-left-c" ng-click="goBackToOrder()" style="color:white;width:40px"></button>
         </ion-nav-buttons>
 
     </ion-nav-bar>
@@ -55,7 +55,7 @@
         </div>
         <div class="spacer" style="height:5px;"></div>
         <div class="row">
-            <button class="allbutton button-block" ng-click="finish()">完成</button>
+            <button class="allbutton button-block button-small" ng-click="finish()">完成</button>
         </div>
         
 </ion-content>
