--- a/udqAutoApp/www/main.html
+++ b/udqAutoApp/www/main.html
@@ -38,6 +38,7 @@
     <script src="app/customer/register/registerSvr.js"></script>
     <script src="app/customer/washType/washtypeCtrl.js"></script>
     <script src="app/common/popUpSvr.js"></script>
+    <script src="app/common/ionicLoading.js"></script>
 
     <script src="app/login/loginCtrl.js"></script>
     <script src="app/login/loginSvr.js"></script>
