--- a/udqAutoApp/www/app/customer/member/washShopInfo.html
+++ b/udqAutoApp/www/app/customer/member/washShopInfo.html
@@ -1,7 +1,7 @@
 ﻿<ion-view title="洗车店信息" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goToCenter()" style="color:white;"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goToCenter()" style="color:white;width:40px"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content padding="true" class="has-header">
@@ -9,7 +9,8 @@
             <ion-item ng-repeat="shop in washShopInfo" class="input-costume">
                 <div class="row">
                     <div class="col col-20">
-                        <img src="image/mydianqu.png" style="height:100%;width:100%;" />
+                        <!--<img src="image/mydianqu.png" style="height:100%;width:100%;" />-->
+                        <img src={{shop.photoUrl}} style="height:100%;width:100%;" />
                     </div>
                     <div class="col col-80">
                         <p>门店：{{shop.shopName}}</p>
