--- a/udqAutoApp/www/app/customer/order/orderMake.html
+++ b/udqAutoApp/www/app/customer/order/orderMake.html
@@ -1,7 +1,7 @@
 <ion-view view-title="洗车预约" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBackMain()" style="color:white;"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBackMain()" style="color:white;width:40px"></button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
             <button class="button-clear" ng-click="commitOrder()" style="color:#fafb75;font-weight:600;">提交</button>
@@ -13,24 +13,24 @@
             <!-- 车辆信息、预约时间、详细地址（可选） -->
             <div class="item item-input makeorder-label" ng-repeat="auto in autoInfo" ng-show="selectedAuto.selectedAutoId ==auto.id">
                 <span class="input-label makeorder-auto-span"><i class="icon ion-model-s"></i></span>
-                <input type="text" class="makeorder-input" style="background-color:white;" ng-model="auto.pn" placeholder="暂无车辆（必选）">
-                <span class="input-label makeorder-auto-span"><i class="icon ion-chevron-right" ng-click="goToAutoList()"></i></span>
+                <input type="text" class="makeorder-input" style="background-color:white;" readonly="readonly" ng-model="auto.pn" placeholder="暂无车辆（必选）">
+                <span class="input-label makeorder-auto-span" ng-click="goToAutoList()"><i class="icon ion-chevron-right"></i></span>
             </div>
             <div class="item item-input makeorder-label" ng-repeat="dis in districts" ng-show="dis.id ==selectedAuto.selectedRegionId">
                 <span class="input-label makeorder-district-span"><i class="icon ion-ios-location-outline"></i></span>
-                <input type="text" class="makeorder-input" style="background-color:white;" ng-model="dis.name" placeholder="选择小区（必选）">
-                <span class="input-label makeorder-district-span"><i class="icon ion-chevron-right" ng-click="goToRegionSelect()"></i></span>
+                <input type="text" class="makeorder-input" style="background-color:white;" readonly="readonly" ng-model="dis.name" placeholder="选择小区（必选）">
+                <span class="input-label makeorder-district-span" ng-click="goToRegionSelect()"><i class="icon ion-chevron-right"></i></span>
             </div>
 
             <div class="item item-input makeorder-label" ng-show="selectedAuto.selectedAutoId ==undefined">
                 <span class="input-label makeorder-auto-span"><i class="icon ion-model-s"></i></span>
-                <input type="text" class="makeorder-input" style="background-color:white;" ng-model="auto.pn" placeholder="暂无车辆（必选）">
-                <span class="input-label makeorder-auto-span"><i class="icon ion-chevron-right" ng-click="goToAutoList()"></i></span>
+                <input type="text" class="makeorder-input" style="background-color:white;" readonly="readonly" ng-model="auto.pn" placeholder="暂无车辆（必选）">
+                <span class="input-label makeorder-auto-span"  ng-click="goToAutoList()"><i class="icon ion-chevron-right"></i></span>
             </div>
             <div class="item item-input makeorder-label" ng-show="undefined ==selectedAuto.selectedRegionId">
                 <span class="input-label makeorder-district-span"><i class="icon ion-ios-location-outline"></i></span>
-                <input type="text" class="makeorder-input" style="background-color:white;" ng-model="dis.name" placeholder="选择小区（必选）">
-                <span class="input-label makeorder-district-span"><i class="icon ion-chevron-right" ng-click="goToRegionSelect()"></i></span>
+                <input type="text" class="makeorder-input" style="background-color:white;" readonly="readonly" ng-model="dis.name" placeholder="选择小区（必选）">
+                <span class="input-label makeorder-district-span" ng-click="goToRegionSelect()"><i class="icon ion-chevron-right"></i></span>
             </div>
             <!-- 选择洗车类型 -->
             <div class="item item-input makeorder-label">
@@ -39,7 +39,7 @@
 
             <div class="input-costume" ng-repeat="type in types">
                 <div class="item item-input makeorder-label">
-                    <ion-checkbox ng-model="type.check" ng-true-value="1" ng-false-value="2" class="col col-100 input-costume washtype-ion-checkbox" ng-click="changeTotalAmount()">
+                    <ion-checkbox ng-model="type.check" ng-true-value="1" ng-false-value="2" class="col col-100 washtype-ion-checkbox" ng-click="changeTotalAmount()">
                         <p style="display:block;float:right">{{type.name}}&nbsp;&nbsp;&nbsp;&nbsp;<a class="a-custome">{{type.amount|currency:'￥'}}</a></p>
                     </ion-checkbox>
                     <button class="input-label makeorder-washtype-span" ng-click="goToTypeNote(type)">详情</button>
@@ -49,9 +49,8 @@
             <div class="spacer" style="height:20px;"></div>
 
             <div class="item makeorder-label item-input">
-                <span class="input-label makeorder-note-span"><p class="makeorder-note-p">备注</p></span>
-                <div class="col col-80 item item-input input-costume">
-                    <textarea placeholder="您还有什么需求呢，请写在这里。" ng-model="order.userNote" rows="4" class="input-costume" style="color:#ffffff;"></textarea>
+                <div class="item item-input input-costume" style="width:99%">
+                    <textarea placeholder="您还有什么需求呢，请写在这里。" ng-model="order.userNote" rows="2" class="input-costume" style="color:#ffffff;"></textarea>
                 </div>
             </div>
 
