--- a/udqAutoApp/www/app/customer/order/orderMgr.html
+++ b/udqAutoApp/www/app/customer/order/orderMgr.html
@@ -1,7 +1,7 @@
 ﻿<ion-view view-title="{{selectOrder.orderNo}}" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfOrderList()" style="color:white;"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfOrderList()" style="color:white;width:40px"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content>
@@ -85,9 +85,9 @@
             <div class="col col-100 item item-input input-costume">
                 <textarea placeholder="您有什么意见，请写在这里。" ng-model="selectOrder.gradeUserNote" rows="5" class="input-costume" style="color:white;width:100%;height:inherit"></textarea>
             </div>
-            <button class="allbutton button-block" ng-show="selectOrder.state==4" ng-click="judge(selectOrder)">确认</button>
+            <button class="allbutton button-block button-small" ng-show="selectOrder.state==4" ng-click="judge(selectOrder)">确认</button>
         </div>
-                <button class="allbutton button-block" ng-click="shareOrder()" ng-show="selectOrder.state==5">分享</button>
+               <!-- <button class="allbutton button-block button-small" ng-click="shareOrder()" ng-show="selectOrder.state==5">分享</button>-->
 
 
     </ion-content>
