--- a/udqAutoApp/www/app/customer/order/orderTime.html
+++ b/udqAutoApp/www/app/customer/order/orderTime.html
@@ -1,7 +1,7 @@
 ﻿<ion-view view-title="预约时间">
     <ion-nav-bar class="bar-stable" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBack()" style="color:white;"></button>
+            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBack()" style="color:white;width:40px"></button>
 
         </ion-nav-buttons>
 
