--- a/udqAutoApp/www/app/employee/order/newOrder.html
+++ b/udqAutoApp/www/app/employee/order/newOrder.html
@@ -9,9 +9,9 @@
                 <ion-option-button class="button-washstore-accept" ng-click="acceptOrder(order)">
                     接收订单
                 </ion-option-button>
-                <ion-option-button class="button-assertive" ng-click="cancelOrder(order)">
+              <!--  <ion-option-button class="button-assertive" ng-click="cancelOrder(order)">
                     取消订单
-                </ion-option-button>
+                </ion-option-button>-->
             </ion-item>
         </ion-list>
     </ion-content>
