--- a/udqAutoApp/www/app/customer/member/memberInfoEdit.html
+++ b/udqAutoApp/www/app/customer/member/memberInfoEdit.html
@@ -2,7 +2,7 @@
 <ion-view title="编辑个人信息" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goToCenter()" style="color:white;width:40px"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goToCenter()" style="color:white;width:33px;font-size:25px"></button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
             <button class="button-clear" ng-click="saveMemberInfo()" style="color:#fafb75;font-weight:600;">保存</button>
