--- a/udqAutoApp/www/app/customer/order/orderMake.html
+++ b/udqAutoApp/www/app/customer/order/orderMake.html
@@ -1,7 +1,7 @@
 <ion-view view-title="洗车预约" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBackMain()" style="color:white;width:40px"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBackMain()" style="color:white;width:33px;font-size:25px"></button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
             <button class="button-clear" ng-click="commitOrder()" style="color:#fafb75;font-weight:600;">提交</button>
