--- a/udqAutoApp/www/app/customer/washType/washTypeIntroduce.html
+++ b/udqAutoApp/www/app/customer/washType/washTypeIntroduce.html
@@ -1,7 +1,7 @@
 ﻿<ion-view view-title="服务介绍" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfMain()" style="color:white;width:40px"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfMain()" style="color:white;width:33px;font-size:25px"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content has-subheader="false">
