--- a/udqAutoApp/www/app/employee/order/photo.html
+++ b/udqAutoApp/www/app/employee/order/photo.html
@@ -1,7 +1,7 @@
 ﻿<ion-view class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="right">
-            <button class="button-clear icon ion-close-circled" ng-click="goBack()"></button>
+            <button class="button-clear icon ion-close-circled" ng-click="goBack()" style="color:white;width:33px;font-size:25px"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
         <ion-content>
