--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -3,20 +3,30 @@
         <ion-nav-buttons side="left">
             <button class="button-clear icon ion-chevron-left" ng-click="goBack()" style="color:white;width:33px;font-size:25px"></button>
         </ion-nav-buttons>
+        <ion-nav-buttons side="right">
+            <button class="button-clear" ng-click="commitOrder()" style="color:#fafb75;font-weight:600;">确定</button>
+        </ion-nav-buttons>
     </ion-nav-bar>
 
     <ion-content>
         <ion-list>
-            <ion-radio ng-model="order.channel" value="alipay">
-                <img style="width:40px;height:40px" src="image/logo/64x64.png" />
-                <p style="color:black">支付宝</p>
+            <ion-list class="input-costume">
+                <ion-radio class="input-costume-radio" ng-model="order.channel" value={{pay.name}} ng-repeat="pay in payMethod">
+                    <img style="width:30px;height:30px;float:left" src="{{pay.imgUri}}" />
+                    <p style="color:black;float:left;height:30px;margin-left:15px;margin-top:2px">{{pay.text}}</p>
+                </ion-radio>
+            </ion-list>
+
+            <!--<ion-radio ng-model="order.channel" value="alipay" style="height: 55px;">
+                <img style="width:30px;height:30px;float:left" src="image/logo/64x64.png" />
+                <p style="color:black;float:left;height:30px;margin-left:15px;margin-top:2px">支付宝</p>
             </ion-radio>
-            <ion-radio ng-model="order.channel" value="wx">
-                <img  style="width:40px;height:40px" src="image/logo/icon64_appwx_logo.png" />
-                <p style="color:black">&nbsp;微信</p>
+            <ion-radio ng-model="order.channel" value="wx"  style="height: 55px;">
+                <img  style="width:30px;height:30px;float:left" src="image/logo/icon64_appwx_logo.png" />
+                <p style="color:black;float:left;height:30px;margin-left:15px;margin-top:2px">&nbsp;微信</p>
             </ion-radio>
         </ion-list>
         <div class="spacer" style="height:20px;"></div>
-        <button class="allbutton  button-block button-small" ng-click="commitOrder()">提交订单</button>
+            <button class="allbutton  button-block button-small" style="width:150px;margin-left:28%; vertical-align:middle;background-color: red;border-color: red;color:white;" ng-click="commitOrder()">提交订单</button>-->
     </ion-content>
 </ion-view>
